# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  docs.md
.cache/clangd/index/: glad.c.48A56E50B0649C57.idx  glad.h.40F3A4C2718DB3F7.idx  glfw3.h.43778A2BB79A96F3.idx  khrplatform.h.E15F408660BB8395.idx  main.cpp.1520C1585406D6FD.idx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: checkVersion.cpp  main.cpp  shaders.cpp  triangle.txt
src/header/: shader.h
